--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,8 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+/* Changed from CLASS to ID */
+#search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -161,7 +162,8 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+/* Changed from CLASS to ID */
+#search-engine-optimization img {
     max-height: 200px;
 }
 
@@ -173,7 +175,8 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+/* Changed from CLASS to ID */
+#search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
