--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,80 +87,47 @@ p {
 }
 
 
-/* Consolidated 3 classes into one benefit-format
-    benefit-lead
-    benefit-brand
-    benefit-cost
+/* Consolidated 3 classes into one benefitFormat
+    .benefit-lead
+    .benefit-brand
+    .benefit-cost
  */
-.benefit-format {
+.benefitFormat {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-format h3 {
+.benefitFormat h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-format img {
+.benefitFormat img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-/* Changed from CLASS to ID */
-#search-engine-optimization {
+/* Consolidated 3 classes into one articleFormat
+    .search-engine-optimization
+    .online-reputation-management
+    .social-media-marketing
+ */
+.articleFormat {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+} 
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/* Changed from CLASS to ID */
-#search-engine-optimization img {
+.articleFormat img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-/* Changed from CLASS to ID */
-#search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.articleFormat h2 { 
     margin-bottom: 20px;
     font-size: 36px;
 }
