--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ header h1 {
     font-size: 48px;
 }
 
-em {
+.seo {
     color: #d9dcd6;
 }
 
@@ -32,9 +32,9 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
-    list-style-type: none;
-}
+    header nav ul {
+        list-style-type: none;
+    }
 
 header nav ul li {
     display: inline-block;
