--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,9 @@ p {
     margin-left: 20px;
 }
 
-.benefits {
+
+/* Removed the CLASS, and target the ASIDE element */
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -91,18 +93,20 @@ p {
     .benefit-lead
     .benefit-brand
     .benefit-cost
+    NEW - Changed to just target ASIDE SECTION
+
  */
-.benefitFormat {
+aside section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefitFormat h3 {
+aside section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefitFormat img {
+aside section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -112,6 +116,7 @@ p {
     .search-engine-optimization
     .online-reputation-management
     .social-media-marketing
+    NEW - Changed to just target ARTICLE
  */
 article {
     margin-bottom: 20px;
